--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,15 @@
       defer
       src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Jost:wght@200;300;400&display=swap"
+      rel="stylesheet"
+    />
     <title>Bridge Family Mediation</title>
   </head>
   <body>
     <div id="root"></div>
-
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
